<resources>
    <string name="app_name">WellSphere</string>
    <string name="welcome_message">Great to have you here!</string>
    <string name="intro_message">Let us know how to address you.</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="height_in_cm">Height in cm</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="wellsphere">WellSphere</string>
    <string name="calendar_date">TODAY, 14 JAN</string>

    <string-array name="goals">
        <item>Weight Loss</item>
        <item>Weight Gain</item>
        <item>Maintenance</item>
    </string-array>

    <string-array name="activity_levels">
        <item>Not Active</item>
        <item>Lightly Active</item>
        <item>Active</item>
        <item>Very Active</item>
    </string-array>

    <string-array name="progress_rate">
        <item>250</item>
        <item>500</item>
        <item>750</item>
        <item>1000</item>
    </string-array>

    <string name="breakfast_calories">Recommended 710 - 1065 kcal</string>
    <string name="lunch_calories">Recommended 1065 - 1420 kcal</string>
    <string name="dinner_calories">Recommended 1065 - 1420 kcal</string>
    <string name="snacks_calories">Recommended 177 - 355 kcal</string>

</resources>
